Update Geo Tags to Global/Worldwide

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <meta name="keywords" content="cozy sci-fi, quantum fiction, audiobook, ebook, waveform handyman, observation bay, cozy mystery" />
     <meta name="author" content="Cozy Quantum Theory" />
     
-    <!-- Geo Tags (Fictional Location Anchored to Reality) -->
-    <meta name="geo.region" content="US-CA" />
+    <!-- Geo Tags (Global / Universal Distribution) -->
+    <meta name="distribution" content="global" />
     <meta name="geo.placename" content="Observation Bay" />
+    <meta name="coverage" content="Worldwide" />
+    <meta name="audience" content="all" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
