Update author to E.L. Finch

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="Welcome to Observation Bay. Join Artie, the Waveform Handyman, in this cozy sci-fi series about fixing local timeline glitches. Ebooks & Audiobooks available for $1.99." />
     <meta name="keywords" content="cozy sci-fi, quantum fiction, audiobook, ebook, waveform handyman, observation bay, cozy mystery" />
-    <meta name="author" content="Cozy Quantum Theory" />
+    <meta name="author" content="E.L. Finch" />
     
     <!-- Geo Tags (Global / Universal Distribution) -->
     <meta name="distribution" content="global" />
